--- a/src/main/resources/com/alterarProdutor.fxml
+++ b/src/main/resources/com/alterarProdutor.fxml
@@ -97,6 +97,11 @@
             <Button layoutX="326.0" layoutY="305.0" mnemonicParsing="false" onAction="#alterar" prefHeight="25.0" prefWidth="53.0" text="Alterar" />
             <Button layoutX="230.0" layoutY="305.0" mnemonicParsing="false" onAction="#limpar" text="Limpar" />
             <Button layoutX="26.0" layoutY="305.0" mnemonicParsing="false" onAction="#telaPrincipal" text="Voltar" />
+            <Text fill="WHITE" layoutX="463.0" layoutY="42.0" stroke="#434343" strokeType="OUTSIDE" strokeWidth="1.5" text="Alterar Cadastro Produtor">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
       </children>
     </AnchorPane>
   </children>
