--- a/src/main/resources/com/novoUsuario.fxml
+++ b/src/main/resources/com/novoUsuario.fxml
@@ -94,6 +94,11 @@
                   <Font size="14.0" />
                </font>
             </Text>
+            <Text fill="WHITE" layoutX="473.0" layoutY="42.0" stroke="#434343" strokeType="OUTSIDE" strokeWidth="1.5" text="Cadastrar Funcionario" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
       </children>
     </AnchorPane>
   </children>
