--- a/src/main/resources/com/sobre.fxml
+++ b/src/main/resources/com/sobre.fxml
@@ -36,9 +36,12 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SobreController">
   <children>
@@ -54,11 +57,26 @@
       </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <TextArea editable="false" layoutX="161.0" layoutY="33.0" prefHeight="64.0" prefWidth="318.0" text="Programa feito para a Matéria de Programação II,&#10; com objetivo de por em prática os conteudos&#10; estudados.">
+            <ImageView id="imagem" fitHeight="338.0" fitWidth="648.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../java/com/util/shutterstock_451718692.jpg" />
+               </image>
+            </ImageView>
+            <Text fill="#860b0b" layoutX="210.0" layoutY="91.0" stroke="BLACK" strokeType="OUTSIDE" text="SiloByte" textAlignment="CENTER" wrappingWidth="227.21875">
+               <font>
+                  <Font name="Times New Roman Bold Italic" size="65.0" />
+               </font>
+            </Text>
+            <TextArea editable="false" layoutX="161.0" layoutY="124.0" prefHeight="138.0" prefWidth="318.0" text="Programa feito para a Matéria de Programação II,&#10; com objetivo de por em prática os conteudos&#10; estudados.&#10;&#10;">
                <font>
                   <Font name="Times New Roman" size="14.0" />
                </font>
             </TextArea>
+            <Text fill="WHITE" layoutX="509.0" layoutY="38.0" stroke="#434343" strokeType="OUTSIDE" strokeWidth="1.5" text="Tela de Informações" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
          </children></AnchorPane>
   </children>
 </VBox>
