--- a/src/main/resources/com/excluirVenda.fxml
+++ b/src/main/resources/com/excluirVenda.fxml
@@ -79,15 +79,20 @@
                   <Font name="Times New Roman Bold Italic" size="65.0" />
                </font>
             </Text>
-            <Button layoutX="233.0" layoutY="309.0" mnemonicParsing="false" onAction="#limparCampos" prefHeight="25.0" prefWidth="67.0" text="Limpar" />
-            <Button layoutX="38.0" layoutY="309.0" mnemonicParsing="false" onAction="#telaPrincipal" prefHeight="25.0" prefWidth="67.0" text="Voltar" />
-            <TextField fx:id="campoID" layoutX="263.0" layoutY="188.0" />
-            <Text fill="WHITE" layoutX="269.0" layoutY="179.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="Código da Venda">
+            <Button layoutX="215.0" layoutY="309.0" mnemonicParsing="false" onAction="#limparCampos" prefHeight="25.0" prefWidth="67.0" text="Limpar" />
+            <Button layoutX="36.0" layoutY="309.0" mnemonicParsing="false" onAction="#telaPrincipal" prefHeight="25.0" prefWidth="67.0" text="Voltar" />
+            <TextField fx:id="campoID" layoutX="248.0" layoutY="188.0" />
+            <Text fill="WHITE" layoutX="259.0" layoutY="180.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="Código da Venda">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Button layoutX="373.0" layoutY="309.0" mnemonicParsing="false" onAction="#excluirVenda" prefHeight="25.0" prefWidth="67.0" text="Excluir" />
+            <Button layoutX="363.0" layoutY="309.0" mnemonicParsing="false" onAction="#excluirVenda" prefHeight="25.0" prefWidth="67.0" text="Excluir" />
+            <Text fill="WHITE" layoutX="531.0" layoutY="48.0" stroke="#434343" strokeType="OUTSIDE" strokeWidth="1.5" text="Excluir Venda">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
          </children></AnchorPane>
   </children>
 </VBox>
