--- a/src/main/resources/com/listarVenda.fxml
+++ b/src/main/resources/com/listarVenda.fxml
@@ -83,6 +83,11 @@
             </Text>
             <Button layoutX="501.0" layoutY="309.0" mnemonicParsing="false" onAction="#limparCampos" prefHeight="25.0" prefWidth="67.0" text="Limpar" />
             <Button layoutX="87.0" layoutY="309.0" mnemonicParsing="false" onAction="#telaPrincipal" prefHeight="25.0" prefWidth="67.0" text="Voltar" />
+            <Text fill="WHITE" layoutX="527.0" layoutY="48.0" stroke="#434343" strokeType="OUTSIDE" strokeWidth="1.5" text="Listar Vendas">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
          </children></AnchorPane>
   </children>
 </VBox>
