--- a/src/main/resources/com/venda.fxml
+++ b/src/main/resources/com/venda.fxml
@@ -97,7 +97,7 @@
                <font>
                   <Font size="14.0" />
                </font></Text>
-            <Text fill="WHITE" layoutX="495.0" layoutY="219.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="Dia de Saída ">
+            <Text fill="WHITE" layoutX="458.0" layoutY="219.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" text="Dia Estimado de Saída ">
                <font>
                   <Font size="14.0" />
                </font></Text>
@@ -120,6 +120,11 @@
                </font>
             </Text>
             <Text fill="WHITE" layoutX="474.0" layoutY="47.0" stroke="#434343" strokeType="OUTSIDE" strokeWidth="1.5" text="Tela de Venda">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="500.0" layoutY="283.0" stroke="#434343" strokeType="OUTSIDE" strokeWidth="1.5" text="(Editável)">
                <font>
                   <Font size="14.0" />
                </font>
